--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@
 .block {
     width: 20px;
     height: 20px;
-    border: solid 1px black;
+    /* border adds grid uncomment to try it out later */
+    /* border: solid 1px black; */
     box-sizing: border-box;
 }
 
